--- a/.github/workflows/update-tracks.yml
+++ b/.github/workflows/update-tracks.yml
@@ -1,7 +1,7 @@
 name: Update tracks
 on:
   schedule:
-    - cron: "0 19 * * *"
+    - cron: "0 19 * * 1"
 permissions:
   contents: write
   pull-requests: write
