--- a/.github/workflows/update-tracks.yml
+++ b/.github/workflows/update-tracks.yml
@@ -1,10 +1,14 @@
 name: Update tracks
+
 on:
   schedule:
     - cron: "0 19 * * 1"
+  workflow_dispatch: {}
+
 permissions:
   contents: write
   pull-requests: write
+
 jobs:
   tracks:
     name: Search and update new tracks
@@ -12,16 +16,20 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v4
+
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
       - name: Install dependencies
         run: pip install homeassistant
+
       - name: Update tracks
         env:
           GROUNDED_TOKEN: ${{ secrets.GROUNDED_TOKEN }}
         run: python update_tracks.py
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
