--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[tool.ruff.flake8-unused-arguments]
+ignore-variadic-names = true
+
 [tool.ruff.lint.isort]
 force-sort-within-sections = true
 known-first-party = ["homeassistant", "tests"]
@@ -7,7 +10,4 @@ split-on-trailing-comma = false
 
 [tool.pylint."MESSAGES CONTROL"]
 # abstract-method - with intro of async there are always methods missing
-disable = [
-    "abstract-method",
-    "unexpected-keyword-arg",
-]
+disable = ["abstract-method", "unexpected-keyword-arg"]
