--- a/.github/workflows/update-tracks.yml
+++ b/.github/workflows/update-tracks.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: "3.13"
 
       - name: Install dependencies
-        run: pip install homeassistant
+        run: pip install homeassistant aiomqtt
 
       - name: Update tracks
         env:
