--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -1,22 +1,25 @@
 name: Validate repo
 
 on:
-  push:
   pull_request:
+  push:
+    branches:
+      - main
   schedule:
     - cron: "0 0 * * *"
 
 jobs:
   hassfest:
     name: Validate with hassfest
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
-      - uses: "actions/checkout@v4"
-      - uses: "home-assistant/actions/hassfest@master"
+      - uses: actions/checkout@v6
+      - uses: home-assistant/actions/hassfest@master
+
   hacs:
     name: Validate with HACS
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
-      - uses: "hacs/action@main"
+      - uses: hacs/action@main
         with:
-          category: "integration"
+          category: integration
